@@ -19,12 +19,15 @@
  * along with lsp-test-fw. If not, see <https://www.gnu.org/licenses/>.
  */
 
-#include <lsp-plug.in/common/types.h>
+//#include <lsp-plug.in/common/types.h>
 #include <lsp-plug.in/test-fw/main/executor.h>
 #include <lsp-plug.in/test-fw/main/tools.h>
 #include <lsp-plug.in/test-fw/init.h>
 
 #include <errno.h>
+#include <stddef.h>
+#include <stdint.h>
+
 #if defined(PLATFORM_LINUX) && defined(USE_GLIBC)
     #include <mcheck.h>
 #endif /* PLATFORM_LINUX */
