@@ -21,6 +21,7 @@
 
 #include <math.h>
 #include <stdarg.h>
+#include <stdint.h>
 #include <stdlib.h>
 
 #include <lsp-plug.in/test-fw/helpers.h>
